Fix the height style where the spacing is missing in timer listing page after setting it to full height

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,7 @@ body,
 #root {
 	height: 100%;
 }
+
+* {
+	box-sizing: border-box;
+}
